# nexus-lab

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Dockerfile.gitlab  README.md  build-pip.sh
app/: .dockerignore  Dockerfile  README.md  __init__.py  env.example  main.py
app/api/v1/: models.py  packages.py  repository.py  system.py
build-pip/: CREDENTIALS-README.md  LICENSE  MANIFEST.in  README.md  TROUBLESHOOTING.md  build-pip.sh  pyproject.toml  requirements.txt  setup.py
build-pip/nexus_repository_api/: .gitignore  cli.py  main.py  models.py
build-pip/tests/: __init__.py  test_main.py
k8s/: kind-config.yaml  kong-gateway.yaml  metrics-server.yaml  nexus-api-deployment.yaml  nexus-config.yaml  nexus-deployment.yaml  nexus-ingress.yaml  storage-class.yaml
scripts/: README.md  build-pip.sh  k8s-debug-README.md  k8s-debug.sh  run-README.md  run-k8s-tests.sh  run-test.sh  run.sh  test.sh
testning/: Dockerfile  README.md  conftest.py  pytest.ini  report.html  requirements.txt
testning/support/: README.md  __init__.py  api_client.py  fastapi_gui_support.py  fastapi_support.py  k8s_helper.py  k8s_support.py  kong_support.py  nexus_support.py  playwright_client.py
testning/test/: test_api_error_handling.py  test_api_errors.py  test_api_validation.py  test_api_workflows.py  test_debug_swagger.py  test_endpoint_urls.py  test_environment_health.py  test_fastapi_basic.py  test_fastapi_gui.py  test_fastapi_gui.py.tmp  test_k8s_integration.py  test_kong_gateway.py  test_nexus_integration.py
