[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "nexus-repository-api"
version = "1.0.0"
description = "En FastAPI-baserad webbapplikation för att hantera Nexus Repository Manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "IP-solutions Lab Team", email = "per.nehlin@ip-solutions.se"},
]
keywords = ["fastapi", "nexus", "repository", "api", "package-manager"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.2",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docker = [
    "gunicorn>=21.0.0",
]
kubernetes = [
    "kubernetes>=28.0.0",
]

[project.urls]
Homepage = "https://github.com/ip-solutions-lab/nexus-repository-api"
Documentation = "https://github.com/ip-solutions-lab/nexus-repository-api/blob/main/README.md"
Repository = "https://github.com/ip-solutions-lab/nexus-repository-api"
"Bug Tracker" = "https://github.com/ip-solutions-lab/nexus-repository-api/issues"

[project.scripts]
nexus-api = "nexus_repository_api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_repository_api*"]

[tool.setuptools.package-data]
nexus_repository_api = ["*.txt", "*.md", "*.yaml", "*.yml"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
